compiler/tests/safety/success/common/test_land.jazz
export fn BS2POLVECq(reg u32 b) 
{
  reg u32 tmp;
  tmp = 0xfff;                // 4095
  b &= tmp;

  tmp = 4097;
  if (b > tmp){
    while (true) { b += 1; }
  }

  b = 100;
  tmp = 0xff;                 // 255
  b &= tmp;

  tmp = 100;
  if (b != tmp){
    while (true) { b += 1; }
  }
}
